--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,14 @@
   background-image: url(../img/pizza-head.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 20px 20px 50px 20px;
+  padding: 20px 20px 30px 20px;
   margin: 20px 0px 20px 0px;
 }
 
 h1 {
-  font-size: 8em;
+  font-size: 9em;
   font-weight: lighter;
+  padding-left: 20px;
 }
 
 h3 {
@@ -41,6 +42,6 @@ h3 {
 }
 
 #bgcolor {
-  background-color: #e8e5dc;
+  background-color: #f4ebcd;
   height: 1000px
 }
